Updated about me related text to match 2025 learned skills & knowledge

--- a/index.html
+++ b/index.html
@@ -57,17 +57,18 @@
                 <h2 class="title-top">About me</h2>
                 <div class="about-content">
                     <div class="about-image-container gradient-hover-container">
-                        <img src="img/about.png">
+                        <!-- <img src="img/about.png"> -->
+                        <p>sorry, i didn't like this photo :(</p>
                     </div>
                     <div class="about-text-container gradient-hover-container">
                         <h2 class="title">About me</h2>
-                        <p>I am a software developer working on both frontend and backend. I build web applications using <span class="bold">HTML, CSS, JavaScript, PHP,</span> and <span class="bold">SQL</span>. I also enjoy coding in <span class="bold">Java</span> and <span class="bold">C#</span>, learning about <span class="bold">AI, server management</span> (Linux and Windows Server), reverse engineering, and finding solutions to complex problems. Fluent in English and Dutch.</p>
-                        <p>In my free time, I enjoy topics like design, AI, science, and philosophy, or spending time with my <span class="bold">kitty cats</span>.</p>
+                        <p>I am a software developer working on both frontend and backend. I build web applications using HTML, CSS, JavaScript, React JSX, a tiny bit of Vue, PHP, and SQL. I also enjoy coding in Java and C#, building AI powered apps or tools, server management (Linux and Windows Server), reverse engineering (still learning), and finding solutions to complex problems.</p>
+                        <p>In my free time, I enjoy topics like design, AI tools & training neural networks, science, and philosophy, or learning about software security and monitoring.</p>
                         <pre style="font-family: sans-serif;">
-                                ╱|、
-    ┏━━━━▶      (`  - 7
-kitty cat                   |、  〵
-                               じしˍ )ノ</pre>
+                ╱|、
+    🐱       (`  - 7
+                |、  〵
+               じしˍ )ノ</pre>
                     </div>
                 </div>
             </div>
@@ -78,7 +79,7 @@ kitty cat                   |、  〵
             <div class="max-width">
                 <div class="services-container gradient-hover-container">
                     <h1>My services</h1>
-                    <h2>what i provide</h2>
+                    <h2>what i can do</h2>
                     <div class="services-content">
                         <div class="card">
                             <div class="box">
@@ -114,7 +115,7 @@ kitty cat                   |、  〵
                     <div class="skills-container-text gradient-hover-container">
                         <h1>My skills</h1>
                         <h2>what i know</h2>
-                        <p>I create clean, beautiful design patterns and value simplicity, though it doesn’t have to be overly simple. I create interfaces that deliver seamless experiences, down to the smallest details of a single pixel, color or font sizes. On the frontend, I build responsive interfaces using <span class="bold">HTML, CSS, PHP, and JavaScript</span>. For backend development, I make applications, APIs, work with SQL. I can build interfaces for both public sites and internal systems, such as control panels and monitoring tools. Additionally, I code desktop applications for Windows in <span class="bold">Python, C#</span> and <span class="bold">Java</span>, while I mostly use Java for Minecraft servers/networks. I'm also passionate to learn <span class="bold">C++</span> and more <span class="bold">low level</span> programming. I'm experienced in building control panels, tools, monitoring tools, and interfaces, as well as working with <span class="bold">VMs, Windows Servers and it's security</span></p>
+                        <p>I create clean, beautiful design patterns and value simplicity, though it doesn't have to be overly simple. I create interfaces that deliver seamless experiences, down to the smallest details of a single pixel, color or font sizes. On the frontend, I build responsive interfaces using <span class="bold">React, Vue</span> or pure <span class="bold">HTML, CSS, PHP, and JavaScript</span>. For backend development, I make applications, APIs, and work with SQL. I develop both public sites and internal systems like control panels and monitoring tools. Additionally, I code desktop applications for Windows in <span class="bold">Python, C#</span> and <span class="bold">Java</span>, while I primarily use Java for Minecraft servers/networks. I'm also passionate to learn <span class="bold">C++</span> and more <span class="bold">low level</span> programming. I'm experienced working with <span class="bold">VMs, Windows Servers and it's security</span>.</p>
                     </div>
                     <div class="skills-container-stats gradient-hover-container">
                         <h1>Quick overview!</h1>
@@ -122,7 +123,7 @@ kitty cat                   |、  〵
                             <div class="bars">
                                 <div class="info">
                                     <span class="label">Creating and designing frontend</span>
-                                    <p><span class="stat_html">HTML</span>, <span class="stat_js">JS</span>, <span class="stat_css">CSS</span></p>
+                                    <p><span class="stat_html">HTML</span>, <span class="stat_js">JS</span>, <span class="stat_css">CSS</span>, <span class="stat_sqlite">React</span></p>
                                 </div>
                                 <div class="line html"></div>
                             </div>
@@ -154,6 +155,13 @@ kitty cat                   |、  〵
                                 </div>
                                 <div class="line mysql"></div>
                             </div>
+                            <div class="bars">
+                                <div class="info">
+                                    <span class="label">Tools powered by AI</span>
+                                    <p>Finetuning LLMs & training models</p>
+                                </div>
+                                <div class="line mysql"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -175,11 +183,11 @@ kitty cat                   |、  〵
                                     <div class="sub-title">Jimin</div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row email">
                                 <i class="fas fa-envelope"></i>
                                 <div class="info">
                                     <div class="head">Email</div>
-                                    <div class="sub-title">abc@gmail.com</div>
+                                    <div class="sub-title">place_holder.email@gmail.com</div>
                                 </div>
                             </div>
                             <div class="row">
@@ -192,7 +200,8 @@ kitty cat                   |、  〵
                         </div>
                     </div>
                     <div class="right">
-                        <h2>Message me</h2>
+                        <h2 class="form-title">Message me</h2>
+                        <p class="form-subtitle"><span class="note">(!)</span> Actually, I assume you already know my email if you have found this webpage <span class="note">(!)</span></p>
                         <form action="#">
                             <div class="info-fields">
                                 <div class="field name">
@@ -216,7 +225,7 @@ kitty cat                   |、  〵
         </section>
 
         <footer>
-            <span>Created By <span class="green">Jimin</span> | © 2024 All rights reserved.</span>
+            <span>Created By <span class="green">Jimin</span> | © 2025 All rights reserved.</span>
         </footer>
         <script src="assets/script.js"></script>
     </body>
