--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Jimin</title>
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="assets/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <script src="https://kit.fontawesome.com/11747d2c0d.js" crossorigin="anonymous"></script>
